--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/ramda": "^0.28.20",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -24,6 +25,7 @@
     "helmet": "^4.6.0",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.7",
+    "ramda": "^0.28.0",
     "response-time": "^2.3.2",
     "xss-clean": "^0.1.1"
   },
